--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.81.1",
     "bootstrap": "^5.3.8",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.553.0",
